[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "flipper-simulation"
path = "flipper.rs"

[[bin]]
name = "dex-simulation"
path = "dex.rs"

[dependencies]
drink = { path = "../drink/drink" }
num-format = { version = "0.4.4", default-features = false }
