[package]
name = "factory_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { path = "../../ink/crates/ink", default-features = false }

pair_contract = { path = "../pair", default-features = false, features = [
    "ink-as-dependency",
] }
traits = { path = "../traits", default-features = false }
amm-helpers = { path = "../helpers", default-features = false }

[lib]
name = "factory_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pair_contract/std",
    "traits/std",
    "amm-helpers/std",
]
ink-as-dependency = []
