[package]
name = "pair_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { path = "../../ink/crates/ink", default-features = false }

psp22 = { path = "../PSP22" , default-features = false }

traits = { path = "../traits", default-features = false }
amm-helpers = { path = "../helpers", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }

[lib]
name = "pair_contract"
path = "lib.rs"
doctest = false

[features]
default = ["std"]
std = [
    "ink/std",
    "psp22/std",
    "traits/std",
    "amm-helpers/std",
]
ink-as-dependency = []
