[package]
name = "router_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { path = "../../ink/crates/ink", default-features = false, features = ["ink-debug"] }

psp22 = { path = "../PSP22" , default-features = false }
wrapped-azero = { path = "../wrapped-azero", default-features = false, features = ["ink-as-dependency"] }

traits = { path = "../traits", default-features = false }
amm-helpers = { path = "../helpers", default-features = false }

num-format = { version = "0.4.4", default-features = false }

[lib]
name = "router_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "psp22/std",
    "traits/std",
]
ink-as-dependency = []
